--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,5 @@
 
+
 body{
 
 	height:1000px;
@@ -6,19 +7,31 @@ body{
 	margin: 10px 0px;
 	margin-left: 100px;
 	padding:10px;
-	
+	font-family: Arial;
+	font-size: 15px;
 
 }
 
 .container {
 
-	width:500px;
+	width:960px;
 	margin: 0px auto;
 	padding: 15px;
-	border: 1px solid;
-
+	
 }
 
+nav {
+	
+	padding-left: 0px;
+	margin-left: 0px;
+	
+}
+
+nav ul{
+
+	padding-left: 0px;
+	margin-left: 0px;
+}
 
 nav ul li {
 
@@ -26,7 +39,7 @@ nav ul li {
 	padding: 20px;
 	margin-left: 0px;
 	padding-left: 0px;
-	font-family: Arial;
+	
 }
 
 a:link {
@@ -40,8 +53,9 @@ a:visited{
 	color:black;
 }
 
-#pic {
+a:hover {
 
-	margin-left: 10px;
-	margin-top: 10px;
+	color:#70d0ff;
 }
+
+
